--- a/convex/tsconfig.json
+++ b/convex/tsconfig.json
@@ -14,7 +14,7 @@
 
     /* These compiler options are required by Convex */
     "target": "ESNext",
-    "lib": ["ES2022", "dom"],
+    "lib": ["ES2022", "dom", "dom.iterable"],
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "isolatedModules": true,
